syntax = "proto3";

option csharp_namespace = "GrpcAgent";

package GrpcAgent;

service grpcNotifier {
  rpc Notify (NotifyRequest) returns (NotifyReply);
}

message NotifyRequest {
  string Content = 1;
}

message NotifyReply {
  bool isSuccess = 1;
}
